# WhyLowDPS

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.standalone  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  VERSION  agent.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  standalone-entrypoint.sh  test_combo.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: checks.yml  dependabot-auto-merge.yml  desktop-build-platform.yml  desktop-release.yml  docker-publish.yml  pages.yml  release.yml
backend/: Cargo.toml  dummy.simc
backend/core/: Cargo.toml  season-config.json
backend/core/scratch/: extract_classes.py  find_minus_one.py
backend/core/src/: addon_parser.rs  error.rs  game_data.rs  gear_resolver.rs  item_db.rs  lib.rs  log_buffer.rs  models.rs  profileset_generator.rs  result_parser.rs  server.rs  simc_runner.rs  simc_runtime.rs  talent_normalize.rs
backend/core/src/game_data/: catalyst.rs  drop_queries.rs  drops.rs  instance_drops.rs
backend/core/src/gear_resolver/: catalyst.rs  eligibility.rs  mod.rs
backend/core/src/item_db/: bonuses.rs  crafting.rs  enchants.rs  loader.rs  missives.rs  mod.rs  state.rs  upgrades.rs
backend/core/src/profileset/: validation.rs
backend/core/src/profileset_generator/: combinator.rs  mod.rs  parser.rs  writer.rs
backend/core/src/server/: auth_handlers.rs  blizzard.rs  character_profile_handlers.rs  data_provider.rs  data_sync.rs  dungeon_data.rs  dungeon_source_blizzard.rs  game_data_handlers.rs  helpers.rs  job_handlers.rs  mod.rs  route_handlers.rs  sim_handlers.rs  simc_updater.rs  system_handlers.rs  types.rs  upgrade_compare.rs  warcraftlogs.rs  wow_data_map.rs
backend/core/src/server/data_sync/: background.rs  catalog.rs  data_files.rs  image_helpers.rs  image_sources.rs  raidbots.rs  recovery_snapshot.rs  wowhead_zones.rs  zones_index.rs
backend/core/src/server/game_data_handlers/: enchantments.rs
backend/core/src/server/sim_handlers/: droptimizer.rs  heatmap.rs  items.rs  matrix.rs  matrix_handlers.rs  top_gear.rs
backend/core/src/storage/: memory.rs  mod.rs  postgres.rs  sqlite.rs
backend/core/src/types/: class_data.rs  mod.rs  season.rs  simc.rs
backend/launcher/: Cargo.toml
backend/launcher/src/: main.rs
backend/resources/: data-manifest.json  zones-encounters-index.json
backend/resources/wow/: warcraft-logs-guides.json  wow-encounters.json  wow-expansions.json  wow-instances.json  wow-mythic-plus-dungeons.json  wow-seasons.json
backend/scripts/: compact-data.js
backend/server/: Cargo.toml  Dockerfile
backend/server/src/: main.rs
desktop/: main.js  package-lock.json  package.json
desktop/scripts/: build-backend.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.docker.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: app_commands.toml  clipboard.toml
desktop/src-tauri/src/: app_logic.rs  main.rs
docs/: architecture.md  development.md  index.html  self-hosting.md  site.webmanifest  styles.css  wow-season-data.md  wow-season-manual-updates.md
docs/superpowers/plans/: 2026-07-10-data-file-state-filters.md
docs/superpowers/specs/: 2026-07-09-raidbots-recovery-snapshot-design.md  2026-07-09-update-first-data-guard-design.md  2026-07-10-data-file-state-filters-design.md
frontend/: Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/characters/: page.tsx
frontend/src/app/components/: AddItemModal.tsx  AuthContext.desktop-login.test.tsx  AuthContext.test.tsx  AuthContext.tsx  ChangelogPopup.test.tsx  ChangelogPopup.tsx  CharacterLinkButton.tsx  CharacterPanel.tsx  CloseBehaviorPrompt.tsx  ComboPill.tsx  ComboSummary.tsx  ConfirmModal.test.tsx  ConfirmModal.tsx  ConsumableMatrixChart.tsx  DataGuard.test.tsx  DataGuard.tsx  DefaultOptionsSettingsCard.tsx  DesktopAppLink.tsx  DesktopWindowTitleBar.tsx  DiscordInvitePrompt.tsx  DpsHeroCard.tsx  ErrorAlert.test.tsx  ExternalBuffMatrixChart.tsx  FightStyleSelector.test.tsx  FightStyleSelector.tsx  GearAffixIndicators.tsx  GearItemCore.tsx  GearItemRow.tsx  GearOverview.tsx  InitialSidebarRoute.tsx  LoginModal.tsx  MainScrollShell.tsx  OptimizeItemModal.tsx  RaidProgressionGrid.test.tsx  RaidProgressionGrid.tsx  ResultsChart.tsx  RouteDetailsModal.tsx  RouteSelectorModal.tsx  ScenarioBuilder.tsx  ScrollToTopOnRouteChange.tsx  (+28 more)
frontend/src/app/drop-finder/: CategorySelector.tsx  DropSlotList.tsx  DungeonGrid.tsx  UpgradeSimulationModeSelector.tsx  page.tsx  types.ts  useDropFinderData.ts  utils.test.ts  utils.ts
frontend/src/app/dungeon-routes/: page.tsx
frontend/src/app/dungeons/: dungeon-rotation.test.ts  dungeon-rotation.ts  page.tsx  shared.test.ts  shared.test.tsx  shared.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/lib/: activity.test.ts  activity.ts  api.test.ts  api.ts  character-domain-types.ts  character-panel-talent.ts  character-panel-utils.ts  constants.ts  default-options.ts  error-utils.ts  fight-style.ts  format.test.ts  format.ts  gear-utils.ts  ilevel.test.ts  ilevel.ts  itemExtraEffect.ts  loot-track.ts  profile-format.ts  routes.ts  scenario-siblings.ts  sim-options-catalog.ts  sim-return.ts  simc-generator.ts  simc-input-utils.test.ts  simc-input-utils.ts  simc-runtime-release.test.ts  simc-runtime-release.ts  source-navigation.ts  (+26 more)
frontend/src/lib/: mdt-parser.ts  simc-parser.ts
scripts/: coverage-rust.js  ensure-cargo.js  ensure-frontend-deps.js  ensure-tauri-build-artifacts.js  generate-blizzard-wow-content.mjs  notify-discord-release.js  release-notes.js  sync-version.js  sync-version.sh  validate-version.js
scripts/tests/: compact-data.test.js  dependabot-auto-merge.test.js  desktop-dev-config.test.js  notify-discord-release.test.js  release-notes.test.js  validate-version.test.js
tools/: generate-app-icon.ps1
(+76 files in other folders)
