[workspace]
members = [
    "backend/core",
    "backend/server",
    "desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "3.1.2-nightly.20260601"
authors = ["WhyLowDps Team"]
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
