[package]
name = "whylowdps-core"
version.workspace = true
edition = "2021"

[features]
default = ["postgres", "web"]
desktop = []
web = ["dep:rusqlite"]
postgres = ["dep:tokio-postgres"]

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
regex = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.33"
jsonwebtoken = "9"
urlencoding = "2.1"

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]
optional = true

[dependencies.tokio-postgres]
version = "0.7"
optional = true
