[package]
name = "whylowdps-core"
version.workspace = true
edition = "2021"

[features]
default = ["postgres", "web"]
desktop = ["dep:rusqlite"]
web = ["dep:rusqlite", "dep:actix-web", "dep:actix-cors", "dep:actix-files"]
postgres = ["dep:tokio-postgres"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
regex = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sysinfo = "0.33"
jsonwebtoken = "9"
urlencoding = "2.1"
thiserror = "2.0.18"
zip = "2"
sevenz-rust = "0.6.1"

actix-web = { version = "4", optional = true }
actix-cors = { version = "0.7", optional = true }
actix-files = { version = "0.6", optional = true }

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]
optional = true

[dependencies.tokio-postgres]
version = "0.7"
optional = true
