[package]
name = "whylowdps-core"
version.workspace = true
edition = "2021"

[features]
default = ["web"]
desktop = ["dep:keyring", "dep:rusqlite"]
web = ["dep:rusqlite", "dep:actix-web", "dep:actix-cors", "dep:actix-files"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
regex = "1"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sha2 = "0.10"
sysinfo = "0.33"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
urlencoding = "2.1"
thiserror = "2.0.18"
zip = "2"
sevenz-rust2 = { version = "0.20", features = ["zstd", "lz4", "deflate", "brotli"] }
keyring = { version = "3.6.3", optional = true }

actix-web = { version = "4", optional = true }
actix-cors = { version = "0.7", optional = true }
actix-files = { version = "0.6", optional = true }

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]
optional = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
] }
