[package]
name = "whylowdps-desktop"
version.workspace = true
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
whylowdps-core = { path = "../../backend/core", default-features = false, features = ["desktop", "web"] }
url = "2.5.8"

[build-dependencies]
tauri-build = { version = "2", features = [] }
