[package]
name = "whylowdps-desktop"
version.workspace = true
edition = "2021"

[dependencies]
tauri = { version = "2.11.2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
whylowdps-core = { path = "../../backend/core", default-features = false, features = ["desktop", "web"] }
url = "2.5.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
zip = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "ApplicationModel_DataTransfer",
    "Foundation",
    "Foundation_Collections",
] }
